ナビゲーションビュー追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">OdaideOekaki</string>
-    <string name="action_settings">Settings</string>
     <string name="twitter_consumer_key">38rQFt0c2GZxZHIWlMyOg3kHc</string>
     <string name="twitter_consumer_secret">UtpyzWPJlP2YG5tIkdna1W8BReuV2GxtD0ikxmdmeJ3sBN6UTP</string>
     <string name="twitter_callback_url">gabu://twitter</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
