--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">お題DEお絵かき</string>
+    <string name="app_name">お題お絵かき</string>
     <string name="twitter_consumer_key">38rQFt0c2GZxZHIWlMyOg3kHc</string>
     <string name="twitter_consumer_secret">UtpyzWPJlP2YG5tIkdna1W8BReuV2GxtD0ikxmdmeJ3sBN6UTP</string>
     <string name="twitter_callback_url">gabu://twitter</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="twitter_oauth">Twitter認証</string>
+    <string name="update_theme">お題変更</string>
 </resources>
